[tool.poetry]
name = "vibdata"
version = "0.6.3"
description = "A library for loading vibration signals datasets"
authors = ["Igor Varejão <imsvarejao@gmail.com>",
           "Joluan Zucateli <joluan.zuca@gmail.com>",
           "Lucas Henrique Sousa Mello <lucashsmello@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
numpy = "^1.17.2"
torch = "^1.7"
tqdm = "^4.0.0"
requests = "^2.0.0"
pandas = "^1.1.0"
scikit-learn = ">=0.19.1"
rarfile = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
python-lsp-server = ">=1.8.0"
python-lsp-ruff = "^1.5.0"
python-lsp-black = ">=1.3.0"
toml = "^0.10.2"
ipython = "^7.0.0"
jedi = "<0.18.0"
seaborn = ">=0.11.0"
pyls-isort = ">=0.2.2"
yapf = "*"
isort = "*"

[tool.ruff]
ignore = ["E501"]
select = ["E", "F", "I001"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
